admin funcional con log de cambios, sin nivel de usuario

--- a/app/views/menuLogin.html
+++ b/app/views/menuLogin.html
@@ -3,9 +3,7 @@
         <div id="loginbox" ng-show="showLoginbox"  style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">              
             <div class="panel panel-info" >
                 <div class="panel-heading"> 
-                    <div class="panel-title">Sign In </div>
-                    
-                    <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="" ng-click="onClickLogin('loading');" >Forgot password?</a></div> <!-- "$('#loginbox').hide(); $('#signupbox').hide(); $('#loading').show()" -->
+                    <div class="panel-title">Panel de administrador GPS de las economias regionales</div>
                 </div>     
                 <div style="padding-top:30px" class="panel-body" >
                     <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div> 
@@ -18,126 +16,16 @@
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                             <input ng-model="user.password" id="login-password" type="password" class="form-control" name="password" placeholder="password">
                         </div>
-
-                        <br>
-                        <div class="input-group" style="margin-top: -16px;"> 
-                            {{errorMessage}}
-                        </div>
-                        <br>
-
-                        <!-- <div class="input-group" style="margin-top: 5px;"> 
-                            <div class="checkbox">
-                                <label>
-                                    <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
-                                </label>
-                            </div>
-                        </div> -->
-
                         <div style="margin-top:10px" class="form-group">
                                 <!-- Button -->
                             <div class="col-sm-12 controls">
-                                <a id="btn-login" href="" class="btn btn-success" ng-click="userSignInWithEmailAndPassword(user)">Login </a>
+                                <a id="btn-login" href="" class="btn btn-success" ng-click="userSignInWithEmailAndPassword(user)">INGRESAR </a>
                             </div>
-                        </div>
-                        <!--div class="form-group">
-                            <div class="col-md-12 control">
-                                <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
-                                        Don't have an account! 
-                                    <a href="" ng-click="onClickLogin('signupbox');" > <!-- onClick="$('#loginbox').hide(); $('#signupbox').show(); $('#loading').hide()" >
-                                        Sign Up Here
-                                    </a>
-                                </div>
-                            </div>
-                        </div-->    
-                    </form>
-                    <div>
-                            
-                    </div>     
+                        </div>   
+                    </form>     
                 </div>                     
             </div>  
-        </div>
-        <div id="signupbox" ng-show="showSignupbox" style=" margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <div class="panel-title">Sign Up</div>
-                    <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" href="" ng-click="onClickLogin('loginbox');" >Sign In</a></div> <!-- onclick="$('#signupbox').hide(); $('#loginbox').show(); $('#loading').hide()" -->
-                </div>  
-                <div class="panel-body" >
-                    <form id="signupform" class="form-horizontal" role="form">
-                        <div id="signupalert" style="display:none" class="alert alert-danger">
-                            <p>Error:</p>
-                            <span></span>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-12" style="text-align:center;">
-                                <img ng-src="{{newUser.photoURLCreate}}" class="img-circle" width="25%">
-                            </div>
-                        </div> 
-                        <div class="form-group">
-                            <label for="email" class="col-md-3 control-label">Email</label>
-                            <div class="col-md-9">
-                                <input ng-model="emailCreate" type="text" class="form-control" name="email" placeholder="Email Address">
-                            </div>
-                        </div>    
-                        <div class="form-group">
-                            <label for="firstname" class="col-md-3 control-label">First Name</label>
-                            <div class="col-md-9">
-                                <input ng-model="nameCreate" type="text" class="form-control" name="firstname" placeholder="First Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="col-md-3 control-label">Password</label>
-                            <div class="col-md-9">
-                                <input ng-model="passwordCreate" type="password" class="form-control" name="passwd" placeholder="Password">
-                            </div>
-                        </div>
-                        <div class="form-group" style="border-top: 1px solid #999; padding-top:20px">
-                            <label for="password" class="col-md-3 control-label">Que eres?</label>
-                            <button class="btn btn-warning" ng-click="gradeState('clients')" style="margin-left:15px;">Cliente</button>
-                            <button class="btn btn-success" ng-click="gradeState('dev')" style="margin-left:10px;">Desarrollador</button>
-                            {{gradeInfo}}
-                        </div>
-                        <div class="form-group" style="border-top: 1px solid #999; padding-top:20px">
-                            <!-- Button -->                                        
-                            <div class="col-md-offset-3 col-md-9">
-                                <button  ng-click="userCreateWithEmailAndPassword(emailCreate,nameCreate,passwordCreate)" href="" id="btn-signup" type="button" class="btn btn-info"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
-                                <span style="margin-left:10px;">or</span>
-                            </div>  
-                        </div>  
-                        <div class="form-group"> 
-                            <div class="col-md-offset-3 col-md-9"> 
-                                <button ng-click="open()" href="" id="btn-fbsignup" type="button" class="btn btn-primary"><i class="icon-facebook"></i>  Sign Up with Facebook</button>
-                            </div>
-                        </div>
-                        <div class="form-group"> 
-                            <div class="col-md-offset-3 col-md-9"> 
-                                {{errorMessage}}
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-3 col-md-9">
-                                <script type="text/ng-template" id="myModalContent.html">
-                                    <div class="modal-header">
-                                        <button ng-click="close()" type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h3 class="modal-title" id="modal-title">Que eres?</h3> 
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button class="btn btn-warning" type="button" ng-click="callbackFacebook('Clients')">Cliente</button>
-                                        <button class="btn btn-success" type="button" ng-click="callbackFacebook('Developers')">Desarrolador</button>
-                                    </div>
-                                </script>                                      
-                           </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div> 
-        <div id="loading" ng-show="showLoading" class="container text-center"> 
-            <img class="logo" src="http://moviliza.me/movilizame.png">
-            <div class="spinner"></div>
-        </div>    
-
-    </div>    
+        </div>   
 </div>
 
 <style>
