--- a/app/views/adminDashboard.html
+++ b/app/views/adminDashboard.html
@@ -1,81 +1,85 @@
 <div ng-controller="indexController">  
 <!-- Start Modal para cambios-->
   <script type="text/ng-template" id="myModalContent.html">
+    <style>
+      .modal-input{
+        width: 60%;
+      }
+      .modal-label{
+        margin-left: 10%;
+      }
+    </style>
       <div class="modal-header">
-          <h1 class="modal-title" id="modal-title">Departamento</h1>
+          <h1 class="modal-title" id="modal-title">Departamento: {{nodeName}}</h1>
       </div>
       <div class="modal-header">
           <h3 class="modal-title" id="modal-title">Datos Generales</h3>
       </div>
       <div class="modal-body" id="modal-body">
         <div class="row">
-          <div class="col-md-4 col-md-offset-4">
-            <form class="form-horizontal">
-                <label>poblacion</label>
-                <input class="form-group" ng-model="eDG.poblacion" type="text" ng-value="eDG.poblacion">
-                <label>poblacion_part</label>
-                <input class="form-group" ng-model="eDG.poblacion_part" type="text" ng-value="eDG.poblacion_part">
-                <label>pbg</label>
-                <input class="form-group" ng-model="eDG.pbg" type="text" ng-value="eDG.pbg">
-                <label>pbg_part</label>
-                <input class="form-group" ng-model="eDG.pbg_part" type="text" ng-value="eDG.pbg_part">
-                <label>empleo_pub</label>
-                <input class="form-group" ng-model="eDG.empleo_pub" type="text" ng-value="eDG.empleo_pub">
-                <label>empleo_pub_part</label>
-                <input class="form-group" ng-model="eDG.empleo_pub_part" type="text" ng-value="eDG.empleo_pub_part">
-                <label>export</label>
-                <input class="form-group" ng-model="eDG.export" type="text" ng-value="eDG.export">
-                <label>export_part</label>
-                <input class="form-group" ng-model="eDG.export_part" type="text" ng-value="eDG.export_part">
-                <label>export_destinos</label>
-                <input class="form-group" ng-model="eDG.export_destinos" type="text" ng-value="eDG.export_destinos">
-                <label>export_productos</label>
-                <input class="form-group" ng-model="eDG.export_productos" type="text" ng-value="eDG.export_productos">
-            </form>
-          </div>
+          <label class="col-md-3 modal-label">poblacion</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.poblacion" type="text" ng-value="eDG.poblacion">
+          <label class="col-md-3 modal-label">poblacion_part</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.poblacion_part" type="text" ng-value="eDG.poblacion_part">
+          <label class="col-md-3 modal-label">pbg</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.pbg" type="text" ng-value="eDG.pbg">
+          <label class="col-md-3 modal-label">pbg_part</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.pbg_part" type="text" ng-value="eDG.pbg_part">
+          <label class="col-md-3 modal-label">empleo_pub</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.empleo_pub" type="text" ng-value="eDG.empleo_pub">
+          <label class="col-md-3 modal-label">empleo_pub_part</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.empleo_pub_part" type="text" ng-value="eDG.empleo_pub_part">
+          <label class="col-md-3 modal-label">export</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.export" type="text" ng-value="eDG.export">
+          <label class="col-md-3 modal-label">export_part</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.export_part" type="text" ng-value="eDG.export_part">
+          <label class="col-md-3 modal-label">export_destinos</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.export_destinos" type="text" ng-value="eDG.export_destinos">
+          <label class="col-md-3 modal-label">export_productos</label>
+          <input class="col-md-9 modal-input" ng-model="eDG.export_productos" type="text" ng-value="eDG.export_productos">
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="saveDG()">Guardar Datos Generales</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Salir</button>
         </div>      
       </div>
       <div class="modal-header">
           <h3 class="modal-title" id="modal-title">Treemap</h3>
       </div>
       <div class="modal-body" id="modal-body">
-          <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-              <form class="form-horizontal">
-                  <label>empleo_part</label>
-                  <input class="form-group" ng-model="t.empleo_part" type="text" ng-value="eT.empleo_part">
-                  <label>export_part</label>
-                  <input class="form-group" ng-model="t.export_part" type="text" ng-value="eT.export_part">
-              </form>
-            </div>
-          </div> 
+          <div class="row">            
+            <label class="col-md-3 modal-label">empleo_part</label>
+            <input class="col-md-9 modal-input" ng-model="eT.empleo_part" type="text" ng-value="eT.empleo_part">
+            <label class="col-md-3 modal-label">export_part</label>
+            <input class="col-md-9 modal-input" ng-model="eT.export_part" type="text" ng-value="eT.export_part">
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="saveT()">Guardar Treemap</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Salir</button>
+          </div>  
       </div>
       <div class="modal-header">
           <h3 class="modal-title" id="modal-title">Scatter</h3>
       </div>
       <div class="modal-body" id="modal-body">
           <div class="row">
-              <div class="col-md-4 col-md-offset-4">
-                <form class="form-horizontal">
-                    <label>empleo_var</label>
-                    <input class="form-group" ng-model="s.empleo_var" type="text" ng-value="eS.empleo_var">
-                    <label>empleo_coef_esp</label>
-                    <input class="form-group" ng-model="s.empleo_coef_esp" type="text" ng-value="eS.empleo_coef_esp">
-                    <label>empleo_part</label>
-                    <input class="form-group" ng-model="s.empleo_part" type="text" ng-value="eS.empleo_part">
-                    <label>export_var</label>
-                    <input class="form-group" ng-model="s.export_var" type="text" ng-value="eS.export_var">
-                    <label>export_coef_esp</label>
-                    <input class="form-group" ng-model="s.export_coef_esp" type="text" ng-value="eS.export_coef_esp">
-                    <label>export_part</label>
-                    <input class="form-group" ng-model="s.export_part" type="text" ng-value="eS.export_part">
-                </form>
-              </div>
-            </div> 
-      </div>
-      <div class="modal-footer">
-          <button class="btn btn-primary" type="button" ng-click="save()">Guardar</button>
-          <button class="btn btn-warning" type="button" ng-click="cancel()">Salir</button>
+            <label class="col-md-3 modal-label">empleo_var</label>
+            <input class="col-md-9 modal-input" ng-model="eS.empleo_var" type="text" ng-value="eS.empleo_var">
+            <label class="col-md-3 modal-label">empleo_coef_esp</label>
+            <input class="col-md-9 modal-input" ng-model="eS.empleo_coef_esp" type="text" ng-value="eS.empleo_coef_esp">
+            <label class="col-md-3 modal-label">empleo_part</label>
+            <input class="col-md-9 modal-input" ng-model="eS.empleo_part" type="text" ng-value="eS.empleo_part">
+            <label class="col-md-3 modal-label">export_var</label>
+            <input class="col-md-9 modal-input" ng-model="eS.export_var" type="text" ng-value="eS.export_var">
+            <label class="col-md-3 modal-label">export_coef_esp</label>
+            <input class="col-md-9 modal-input" ng-model="eS.export_coef_esp" type="text" ng-value="eS.export_coef_esp">
+            <label class="col-md-3 modal-label">export_part</label>
+            <input class="col-md-9 modal-input" ng-model="eS.export_part" type="text" ng-value="eS.export_part">             
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="saveS()">Guardar Scatter</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Salir</button>
+          </div> 
       </div>
   </script>
 <!-- End modal para cambios -->
