--- a/app/views/adminDashboard.html
+++ b/app/views/adminDashboard.html
@@ -1,127 +1,212 @@
-<div ng-controller="indexController">  
-<!-- Start Modal para cambios-->
-  <script type="text/ng-template" id="myModalContent.html">
-    <style>
-      .modal-input{
-        width: 60%;
-      }
-      .modal-label{
-        margin-left: 10%;
-      }
-    </style>
-      <div class="modal-header">
-          <h1 class="modal-title" id="modal-title">Departamento: {{nodeName}}</h1>
-      </div>
-      <div class="modal-header">
-          <h3 class="modal-title" id="modal-title">Datos Generales</h3>
-      </div>
-      <div class="modal-body" id="modal-body">
-        <div class="row">
-          <label class="col-md-3 modal-label">poblacion</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.poblacion" type="text" ng-value="eDG.poblacion">
-          <label class="col-md-3 modal-label">poblacion_part</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.poblacion_part" type="text" ng-value="eDG.poblacion_part">
-          <label class="col-md-3 modal-label">pbg</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.pbg" type="text" ng-value="eDG.pbg">
-          <label class="col-md-3 modal-label">pbg_part</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.pbg_part" type="text" ng-value="eDG.pbg_part">
-          <label class="col-md-3 modal-label">empleo_pub</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.empleo_pub" type="text" ng-value="eDG.empleo_pub">
-          <label class="col-md-3 modal-label">empleo_pub_part</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.empleo_pub_part" type="text" ng-value="eDG.empleo_pub_part">
-          <label class="col-md-3 modal-label">export</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.export" type="text" ng-value="eDG.export">
-          <label class="col-md-3 modal-label">export_part</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.export_part" type="text" ng-value="eDG.export_part">
-          <label class="col-md-3 modal-label">export_destinos</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.export_destinos" type="text" ng-value="eDG.export_destinos">
-          <label class="col-md-3 modal-label">export_productos</label>
-          <input class="col-md-9 modal-input" ng-model="eDG.export_productos" type="text" ng-value="eDG.export_productos">
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="saveDG()">Guardar Datos Generales</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Salir</button>
-        </div>      
-      </div>
-      <div class="modal-header">
-          <h3 class="modal-title" id="modal-title">Treemap</h3>
-      </div>
-      <div class="modal-body" id="modal-body">
-          <div class="row">            
-            <label class="col-md-3 modal-label">empleo_part</label>
-            <input class="col-md-9 modal-input" ng-model="eT.empleo_part" type="text" ng-value="eT.empleo_part">
-            <label class="col-md-3 modal-label">export_part</label>
-            <input class="col-md-9 modal-input" ng-model="eT.export_part" type="text" ng-value="eT.export_part">
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="saveT()">Guardar Treemap</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Salir</button>
-          </div>  
-      </div>
-      <div class="modal-header">
-          <h3 class="modal-title" id="modal-title">Scatter</h3>
-      </div>
-      <div class="modal-body" id="modal-body">
-          <div class="row">
-            <label class="col-md-3 modal-label">empleo_var</label>
-            <input class="col-md-9 modal-input" ng-model="eS.empleo_var" type="text" ng-value="eS.empleo_var">
-            <label class="col-md-3 modal-label">empleo_coef_esp</label>
-            <input class="col-md-9 modal-input" ng-model="eS.empleo_coef_esp" type="text" ng-value="eS.empleo_coef_esp">
-            <label class="col-md-3 modal-label">empleo_part</label>
-            <input class="col-md-9 modal-input" ng-model="eS.empleo_part" type="text" ng-value="eS.empleo_part">
-            <label class="col-md-3 modal-label">export_var</label>
-            <input class="col-md-9 modal-input" ng-model="eS.export_var" type="text" ng-value="eS.export_var">
-            <label class="col-md-3 modal-label">export_coef_esp</label>
-            <input class="col-md-9 modal-input" ng-model="eS.export_coef_esp" type="text" ng-value="eS.export_coef_esp">
-            <label class="col-md-3 modal-label">export_part</label>
-            <input class="col-md-9 modal-input" ng-model="eS.export_part" type="text" ng-value="eS.export_part">             
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="saveS()">Guardar Scatter</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Salir</button>
-          </div> 
-      </div>
-  </script>
-<!-- End modal para cambios -->
-  <div class="col-md-12">          
-    <div class="row page-header">
-      <div class="col-md-2">
-        <h1>Departamentos</h1>
-      </div><!-- /.col-md-2 -->
-      <div class="col-md-4 col-md-offset-2">
-        <div class="input-group" style="margin-top: 25px;">
-          <input type="text" class="form-control" placeholder="Buscar..." ng-model="searchText">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-          </span>
-        </div>
-      </div><!-- /.col-md-3 -->
-    </div><!-- /.row page-header-->
-  </div>  
-  <uib-tabset active="active">
-    <uib-tab heading="" select="getQuestions()">
-      <div class="table-responsive" >
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Nombre departamento</th>
-              <th>Provincia</th>
-              <th>Región</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="departamento in departamentos | filter: searchText">
-              <td>{{departamento.id}}</td>
-              <td>{{departamento.depto}}</td>
-              <td>{{departamento.prov}}</td>
-              <td>{{departamento.region}}</td>
-              <td><a href="" ng-click="getNodeData(departamento)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> editar</a></td>
-            </tr>           
-          </tbody>
-        </table>
-      </div>
-    </uib-tab> 
-  </uib-tabset>
+<div layout="row" layout-wrap layout-padding>
+  <div layout="column" id="selectorRegion" flex="50">    
+    <md-input-container>
+      <label>Región</label>
+      <md-select ng-model="region">
+        <md-option ng-repeat="region in regions" ng-value="region.name" ng-click="filterRegion(region)">
+          {{region.name}}
+        </md-option>
+      </md-select>
+    </md-input-container>
+
+    <md-input-container ng-show="showProv">
+      <label>Provincia</label>
+      <md-select ng-model="provSel">
+        <md-option ng-value="prov.name" ng-repeat="prov in provs | filter: regFilter : true" ng-click="filterProv(prov)">
+          {{prov.name}}
+        </md-option>
+      </md-select>
+    </md-input-container>    
+    
+    <md-input-container ng-show="showDep">
+      <label>Departamento</label>
+      <md-select ng-model="dep">
+        <md-option ng-value="dep.name" ng-repeat="dep in deps | filter: provFilter : true" ng-click="selectDep(dep)">
+          {{dep.name}}
+        </md-option>
+      </md-select>
+    </md-input-container>
+  </div>
+    <!--Selector por sectores-->
+  <div layout="column" id="selectorSector" flex="50">
+    <md-input-container>
+      <label>Nivel 1</label>
+      <md-select ng-model="lvl.name">
+        <md-option ng-value="lvl.name" ng-repeat="lvl in lvl1" ng-click="filterLvl1(lvl)">
+          {{lvl.name}}
+        </md-option>
+      </md-select>
+    </md-input-container>
+
+    <md-input-container ng-show="showLvl2">
+      <label>Nivel 2</label>
+      <md-select ng-model="lvl2S">
+        <md-option ng-value="lvl.name" ng-repeat="lvl in lvl2 | filter: lvl1Filter : true" ng-click="filterLvl2(lvl)">
+          {{lvl.name}}
+        </md-option>
+      </md-select>
+    </md-input-container>
+
+    <md-input-container ng-show="showLvl3">
+      <label>Nivel 3</label>
+      <md-select ng-model="lvl3S">
+        <md-option ng-value="lvl.name" ng-repeat="lvl in lvl3 | filter: lvl2Filter : true" ng-click="filterLvl3(lvl)">
+          {{lvl.name}}
+        </md-option>
+      </md-select>
+    </md-input-container>
+
+    <md-input-container ng-show="showLvl4">
+      <label>Nivel 4</label>
+      <md-select ng-model="lvl4S">
+        <md-option ng-value="lvl.name" ng-repeat="lvl in lvl4 | filter: lvl3Filter : true" ng-click="selectLvl4(lvl)">
+          {{lvl.name}}
+        </md-option>
+      </md-select>
+    </md-input-container>
+  </div>
 </div>
+
+
+<md-toolbar>
+  <h1 class="md-toolbar-tools"><span>Datos generales región</span></h1>
+</md-toolbar> 
+  <div layout="row" layout-wrap layout-padding>
+    <md-input-container flex="50">
+      <label>poblacion</label>
+      <input ng-model="eDgReg.poblacion" ng-value="eDgReg.poblacion">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>poblacion_part</label>
+      <input ng-model="eDgReg.poblacion_part" ng-value="eDgReg.poblacion_part">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>pbg</label>
+      <input ng-model="eDgReg.pbg" type="text" ng-value="eDgReg.pbg">
+    </md-input-container>
+      
+    <md-input-container flex="50">
+      <label>pbg_part</label>
+      <input ng-model="eDgReg.pbg_part" type="text" ng-value="eDgReg.pbg_part">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>empleo_pub</label>
+      <input ng-model="eDgReg.empleo_pub" type="text" ng-value="eDgReg.empleo_pub">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>empleo_pub_part</label>
+      <input ng-model="eDgReg.empleo_pub_part" ng-value="eDgReg.empleo_pub_part">
+    </md-input-container>
+
+    <md-input-container flex="25">
+      <label>export</label>
+      <input ng-model="eDgReg.export" ng-value="eDgReg.export">
+    </md-input-container>
+
+    <md-input-container flex="25">
+      <label>export_part</label>
+      <input ng-model="eDgReg.export_part" ng-value="eDgReg.export_part">
+    </md-input-container>
+
+    <md-input-container flex="25">
+      <label>export_destinos</label>
+      <input ng-model="eDgReg.export_destinos" ng-value="eDgReg.export_destinos">
+    </md-input-container>
+
+    <md-input-container flex="25">
+      <label>export_productos</label>
+      <input ng-model="eDgReg.export_productos" ng-value="eDgReg.export_productos">
+    </md-input-container>
+  
+    <md-button class="md-raised md-primary" ng-click="saveDgReg(eDgReg)">
+      Guardar Datos Generales Region
+    </md-button>     
+  </div>
+  <md-toolbar>
+    <h1 class="md-toolbar-tools"><span>Datos Generales Sector</span></h1>
+  </md-toolbar>  
+  <div layout="row" layout-wrap layout-padding>
+    <md-input-container flex="50">
+      <label>empleo</label>
+      <input ng-model="eDgSect.empleo" ng-value="eDgSect.empleo">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>empleo_part</label>
+      <input ng-model="eDgSect.empleo_part" ng-value="eDgSect.empleo_part">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>export</label>
+      <input ng-model="eDgSect.export" ng-value="eDgSect.export">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>export_part</label>
+      <input ng-model="eDgSect.export_part" ng-value="eDgSect.export_part">
+    </md-input-container>
+
+    <md-button class="md-raised md-primary" ng-click="saveDgSect(eDgSect)">
+      Guardar Datos Generales Sector
+    </md-button>    
+  </div>
+  <md-toolbar>
+    <h1 class="md-toolbar-tools"><span>Treemap</span></h1>
+  </md-toolbar>
+  <div layout="row" layout-wrap layout-padding>
+    <md-input-container flex="50">
+      <label>empleo_part</label>
+      <input ng-model="eT.empleo_part" ng-value="eT.empleo_part">
+    </md-input-container>
+
+    <md-input-container flex="50">
+      <label>export_part</label>
+      <input ng-model="eT.export_part" ng-value="eT.export_part">
+    </md-input-container>
+    
+    <md-button class="md-raised md-primary" ng-click="saveT(eT)">
+      Guardar Treemap
+    </md-button>    
+  </div>
+  <md-toolbar>
+    <h1 class="md-toolbar-tools"><span>Scatter</span></h1>
+  </md-toolbar>
+  <div layout="row" layout-wrap layout-padding>
+    <md-input-container flex="33">
+      <label>empleo_var</label>
+      <input ng-model="eS.empleo_var" ng-value="eS.empleo_var">
+    </md-input-container>
+    
+    <md-input-container flex="33">
+      <label>empleo_coef_esp</label>
+      <input ng-model="eS.empleo_coef_esp" ng-value="eS.empleo_coef_esp">
+    </md-input-container>
+    
+    <md-input-container flex="33">
+      <label>empleo_part</label>
+      <input ng-model="eS.empleo_part" ng-value="eS.empleo_part">
+    </md-input-container>
+    
+    <md-input-container flex="33">
+      <label>export_var</label>
+      <input ng-model="eS.export_var" ng-value="eS.export_var">
+    </md-input-container>
+    
+    <md-input-container flex="33">
+      <label>export_coef_esp</label>
+      <input ng-model="eS.export_coef_esp" ng-value="eS.export_coef_esp">
+    </md-input-container>
+
+    <md-input-container flex="33">
+      <label>export_part</label>
+      <input ng-model="eS.export_part" ng-value="eS.export_part">
+    </md-input-container>
+
+    <md-button class="md-raised md-primary" ng-click="saveS(eS)">
+      Guardar Scatter
+    </md-button>
+  </div> 
