admin v1.0 agregado solo los <md-divider>

--- a/app/views/adminDashboard.html
+++ b/app/views/adminDashboard.html
@@ -8,7 +8,7 @@
         </md-option>
       </md-select>
     </md-input-container>
-
+    
     <md-input-container ng-show="showProv">
       <label>Provincia</label>
       <md-select ng-model="provSel">
@@ -66,11 +66,11 @@
     </md-input-container>
   </div>
 </div>
-
-
-<md-toolbar>
-  <h1 class="md-toolbar-tools"><span>Datos generales región</span></h1>
-</md-toolbar> 
+<md-divider></md-divider>
+<md-toolbar layout="row" layout-align="center center">
+  <h1><span >DATOS GENERALES REGIÓN</span></h1>
+</md-toolbar>
+<md-divider></md-divider> 
   <div layout="row" layout-wrap layout-padding>
     <md-input-container flex="50">
       <label>poblacion</label>
@@ -126,9 +126,11 @@
       Guardar Datos Generales Region
     </md-button>     
   </div>
-  <md-toolbar>
-    <h1 class="md-toolbar-tools"><span>Datos Generales Sector</span></h1>
+  <md-divider></md-divider>
+  <md-toolbar layout="row" layout-align="center center">
+    <h1><span>DATOS GENERALES SECTOR</span></h1>
   </md-toolbar>  
+  <md-divider></md-divider>
   <div layout="row" layout-wrap layout-padding>
     <md-input-container flex="50">
       <label>empleo</label>
@@ -154,9 +156,11 @@
       Guardar Datos Generales Sector
     </md-button>    
   </div>
-  <md-toolbar>
-    <h1 class="md-toolbar-tools"><span>Treemap</span></h1>
+  <md-divider></md-divider>
+  <md-toolbar layout="row" layout-align="center center">
+    <h1><span>TREEMAP</span></h1>
   </md-toolbar>
+  <md-divider></md-divider>
   <div layout="row" layout-wrap layout-padding>
     <md-input-container flex="50">
       <label>empleo_part</label>
@@ -172,9 +176,11 @@
       Guardar Treemap
     </md-button>    
   </div>
-  <md-toolbar>
-    <h1 class="md-toolbar-tools"><span>Scatter</span></h1>
+  <md-divider></md-divider>
+  <md-toolbar layout="row" layout-align="center center">
+    <h1><span>SCATTER</span></h1>
   </md-toolbar>
+  <md-divider></md-divider>
   <div layout="row" layout-wrap layout-padding>
     <md-input-container flex="33">
       <label>empleo_var</label>
